--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
     "@material-ui/core": "^4.11.3",
     "@mui/icons-material": "^5.10.2",
     "@mui/material": "^5.10.2",
+    "@types/jest": "^29.0.3",
+    "@types/node": "^18.7.20",
+    "@types/react": "^17.0.50",
+    "@types/react-dom": "^18.0.6",
+    "@types/react-redux": "^7.1.24",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^0.21.1",
     "pg": "^8.2.1",
     "react": "^17.0.1",
